pandas tasks, missed the last one

--- a/Les2/Les2_PANDAS.ipynb
+++ b/Les2/Les2_PANDAS.ipynb
@@ -672,81 +672,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>cover</th>\n",
-       "      <th>мягкая</th>\n",
-       "      <th>твердая</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>author_name</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Островский</th>\n",
-       "      <td>660</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Тургенев</th>\n",
-       "      <td>650</td>\n",
-       "      <td>450</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Чехов</th>\n",
-       "      <td>0</td>\n",
-       "      <td>950</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "cover        мягкая  твердая\n",
-       "author_name                 \n",
-       "Островский      660        0\n",
-       "Тургенев        650      450\n",
-       "Чехов             0      950"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "authors_price_sum = authors_price.pivot_table(\n",
+    "file_name = 'book_info.pkl'\n",
+    "\n",
+    "book_info = authors_price.pivot_table(\n",
     "    values='price', \n",
     "    index='author_name', \n",
     "    columns='cover', \n",
     "    aggfunc=np.sum, \n",
     "    fill_value=0\n",
-    ")\n",
-    "authors_price_sum\n"
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "book_info.to_pickle(file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "book_info2 = pd.read_pickle(file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert book_info.equals(book_info2), 'Something went wrong...'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If you seee this message, then everything is working as expected\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('If you seee this message, then everything is working as expected')"
    ]
   },
   {
